--- a/my_notebookx/test.ipynb
+++ b/my_notebookx/test.ipynb
@@ -50,23 +50,30 @@
       "Grid step (cell size): 969394202136.0896\n",
       "*====================================================================================================*\n",
       "Setting beam_info var to Beam: BMAJ=0.165413767099392 arcsec BMIN=0.12207780778406399 arcsec BPA=6.09619140625 deg\n",
-      "Setting beam_kernel var to <astropy.convolution.kernels.Gaussian2DKernel object at 0x7fbd925934c0>\n",
+      "Setting beam_kernel var to <astropy.convolution.kernels.Gaussian2DKernel object at 0x7fcfc6bbbf40>\n",
       "Available categories for prototyping: dict_keys(['velocity', 'orientation', 'intensity', 'linewidth', 'lineslope', 'height_upper', 'height_lower'])\n",
       "Using default and/or tag-based parametric forms for model...\n",
-      "Setting velocity function to <function keplerian_vertical at 0x7fbd92594d30>\n",
-      "Setting upper surface height function to <function z_upper_exp_tapered at 0x7fbd92594e50>\n",
-      "Setting lower surface height function to <function z_lower_exp_tapered at 0x7fbd92594ee0>\n",
-      "Setting intensity function to <function intensity_powerlaw_rout at 0x7fbd925951b0>\n",
-      "Setting linewidth function to <function linewidth_powerlaw at 0x7fbd92595480>\n",
-      "Setting lineslope function to <function lineslope_powerlaw at 0x7fbd92595510>\n",
-      "Setting line profile function to <function line_profile_bell at 0x7fbd925955a0>\n",
-      "Setting composite upper+lower line profile function to <function line_uplow_mask at 0x7fbd925956c0>\n"
+      "Setting velocity function to <function keplerian_vertical at 0x7fcfc6b45360>\n",
+      "Setting upper surface height function to <function z_upper_exp_tapered at 0x7fcfc6b45480>\n",
+      "Setting lower surface height function to <function z_lower_exp_tapered at 0x7fcfc6b45510>\n",
+      "Setting intensity function to <function intensity_powerlaw_rout at 0x7fcfc6b457e0>\n",
+      "Setting linewidth function to <function linewidth_powerlaw at 0x7fcfc6b45ab0>\n",
+      "Setting lineslope function to <function lineslope_powerlaw at 0x7fcfc6b45b40>\n",
+      "Setting line profile function to <function line_profile_bell at 0x7fcfc6b45bd0>\n",
+      "Setting composite upper+lower line profile function to <function line_uplow_mask at 0x7fcfc6b45cf0>\n"
      ]
     }
    ],
    "source": [
     "from discminer.mining_utils import get_noise_mask, init_data_and_model\n",
     "datacube, model = init_data_and_model(Rmin=0, Rmax=1.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modified version"
    ]
   },
   {
@@ -422,7 +429,7 @@
       "Saving projected R,phi,z disc coordinates for upper emission surface into .npy binaries...\n",
       "Saving projected R,phi,z disc coordinates for lower emission surface into .npy binaries...\n",
       "*====================================================================================================*\n",
-      "9.29 s ± 234 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "9.07 s ± 369 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -442,15 +449,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Original version"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -801,14 +808,79 @@
       "Saving projected R,phi,z disc coordinates for upper emission surface into .npy binaries...\n",
       "Saving projected R,phi,z disc coordinates for lower emission surface into .npy binaries...\n",
       "*====================================================================================================*\n",
-      "12.8 s ± 148 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "24.4 s ± 3.81 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
-    "modelcube = model.make_model(make_convolve=True)\n",
-    "\n"
+    "modelcube = model.make_model(make_convolve=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*====================================================================================================*\n",
+      "Running prototype model with the following parameters:\n",
+      "\n",
+      "{'height_lower': {'Rb': 803.90594,\n",
+      "                  'p': 1.107099,\n",
+      "                  'q': 2.859784,\n",
+      "                  'z0': 14.227028},\n",
+      " 'height_upper': {'Rb': 108.607483,\n",
+      "                  'p': 1.65208,\n",
+      "                  'q': 0.550336,\n",
+      "                  'z0': 52.680114},\n",
+      " 'intensity': {'I0': 0.10439999999999999,\n",
+      "               'Rout': 717.971915,\n",
+      "               'p': -2.659016,\n",
+      "               'q': 2.156254},\n",
+      " 'lineslope': {'Ls': 1.676401, 'p': 0.314061},\n",
+      " 'linewidth': {'L0': 0.316459, 'p': -0.288951, 'q': -0.355926},\n",
+      " 'orientation': {'PA': 1.010296,\n",
+      "                 'incl': -0.672928,\n",
+      "                 'xc': -0.91338,\n",
+      "                 'yc': -1.826827},\n",
+      " 'velocity': {'Mstar': 1.973085, 'vel_sign': -1.0, 'vsys': 5.099463}}\n",
+      "\n",
+      "*====================================================================================================*\n",
+      "*====================================================================================================*\n",
+      "Computing disc upper and lower surface coordinates, projected on the sky plane...\n",
+      "Using height and orientation parameters from prototype model:\n",
+      "\n",
+      "{'height_lower': {'Rb': 803.90594,\n",
+      "                  'p': 1.107099,\n",
+      "                  'q': 2.859784,\n",
+      "                  'z0': 14.227028},\n",
+      " 'height_upper': {'Rb': 108.607483,\n",
+      "                  'p': 1.65208,\n",
+      "                  'q': 0.550336,\n",
+      "                  'z0': 52.680114},\n",
+      " 'orientation': {'PA': 1.010296,\n",
+      "                 'incl': -0.672928,\n",
+      "                 'xc': -0.91338,\n",
+      "                 'yc': -1.826827}}\n",
+      "Saving projected R,phi,z disc coordinates for upper emission surface into .npy binaries...\n",
+      "Saving projected R,phi,z disc coordinates for lower emission surface into .npy binaries...\n",
+      "*====================================================================================================*\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelcube = model.make_model(make_convolve=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compare results"
    ]
   },
   {
@@ -819,7 +891,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f0ed9870c40>"
+       "<matplotlib.image.AxesImage at 0x7fa769d5ddb0>"
       ]
      },
      "execution_count": 9,
@@ -841,15 +913,38 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "plt.imshow(modelcube.data[64])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "modelcube_nis = np.load('modelcube_newinterpstrat.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.469446951953614e-17"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(np.abs((modelcube_nis-modelcube.data)))"
+   ]
   }
  ],
  "metadata": {
